Fix Mobile Layout Text Vertical Overflow, Sassify

--- a/_sass/_new.scss
+++ b/_sass/_new.scss
@@ -92,25 +92,31 @@ nav {
     margin-top: 70px;
     color: #ddd;
     position: absolute;
-}
-#message-container #hello {
-    font-family: 'Asul', sans-serif;
-    font-size: 48px;
-}
-#message-container p {
-    color: #ddd;
-    line-height: 30px;
-    font-size: 18px;
-    font-family: Quicksand;
-    transition: all .2s ease-out;
-    text-shadow: 0px 0px 2px #333;
-}
-#message-container p.introduction {
-    margin: 10px 0 35px 0;
-}
-#message-container p.joke {
-    color:#ddd;
-    font-style: italic;
+    
+    @media screen and (max-width: 640px) {
+        margin-top: 50px;
+    }
+
+    #hello {
+        font-family: 'Asul', sans-serif;
+        font-size: 48px;
+    }
+
+    p {
+        color: #ddd;
+        line-height: 30px;
+        font-size: 18px;
+        font-family: Quicksand;
+        transition: all .2s ease-out;
+        text-shadow: 0px 0px 2px #333;
+    }
+    p.introduction {
+        margin: 10px 0 35px 0;
+    }
+    p.joke {
+        color:#ddd;
+        font-style: italic;
+    }
 }
 
 /* Content */
